--- a/EventsApp/EventsApp/Views/Shared/_EventAllPartial.cshtml
+++ b/EventsApp/EventsApp/Views/Shared/_EventAllPartial.cshtml
@@ -44,18 +44,29 @@
                     </div>
                 }
 
-                using (Html.BeginForm("Vote", "Events", FormMethod.Post))
-                {
-                    @Html.AntiForgeryToken()
+                <div class="row">
+                    <div class="col-sm-6 col-md-6 col-lg-6">
+                        @using (Html.BeginForm("VoteUp", "Events", FormMethod.Post))
+                        {
+                        <input hidden="hidden" name="id" value="@Model.Id" />
 
-                    @Html.ValidationSummary(false, "", new { @class = "text-danger" })
-                    <div class="form-group">
-                        <input name="EventId" type="hidden" value="@Model.Id" class="form-control" />
+                        <div class="form-group">
+                            <input type="submit" value="Vote up" class="btn" />
+                        </div>
+                        }
                     </div>
-                    <div class="form-group">
-                        <input type="submit" value="Vote up" class="btn btn-info" />
+
+                    <div class="col-sm-6 col-md-6 col-lg-6">
+                        @using (Html.BeginForm("VoteDown", "Events", FormMethod.Post))
+                        {
+                        <input hidden="hidden" name="id" value="@Model.Id" />
+
+                        <div class="form-group">
+                            <input type="submit" value="Vote down" class="btn " />
+                        </div>
+                        }
                     </div>
-                }
+                </div>
             }
         </div>
         <div class="ratings">
