--- a/EventsApp/EventsApp/Areas/Event/Views/All.cshtml
+++ b/EventsApp/EventsApp/Areas/Event/Views/All.cshtml
@@ -13,7 +13,7 @@
 
 <div class="container body-content">
     <div class="row">
-        <div class="col-md-3">
+        <div class="col-md-3 col-sm-3 col-lg-3">
             <p class="lead">Categories</p>
             <hr/>
             @Html.Action("CategoriesListForEventAll", "Events")
@@ -21,9 +21,13 @@
             <p class="lead">Search by Locations</p>
             <hr/>
             @Html.Action("LocationsListForEventAll", "Events")
+            <hr/>
+            @Html.ActionLink("Clear filter", "All", null, htmlAttributes: new {@class = "btn btn-info pull-right"})
         </div>
-        <div class="col-md-9">
-           @foreach (var eventItem in Model)
+        <br/>
+
+        <div class="col-md-9 col-sm-9 col-lg-9">
+            @foreach (var eventItem in Model)
             {
                 @Html.Partial("~/Views/Shared/_EventAllPartial.cshtml", eventItem)
             }
