--- a/EventsApp/EventsApp/Areas/Event/Views/Create.cshtml
+++ b/EventsApp/EventsApp/Areas/Event/Views/Create.cshtml
@@ -16,7 +16,8 @@
                     <legend>Add new event</legend>
                 </fieldset>
 
-                @*@Html.ValidationSummary(false, "", new { @class = "text-danger" })*@
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
                 <div class="form-group">
                     @Html.LabelFor(m => m.Title, new { @class = "col-lg-3 control-label" })
                     <div class="col-lg-9">
@@ -67,11 +68,11 @@
                 <div class="form-group">
                     @Html.LabelFor(m => m.StartDateTime, new { @class = "col-lg-3 control-label" })
                     <div class="col-lg-9">
-                        @Html.TextBoxFor(m => m.StartDateTime, "yyyy-MM-dd", new { @class = "form-control", @type = "datetime", name = "StartDateTime", id = "StartDateTime" })
+                        @Html.TextBoxFor(m => m.StartDateTime, "yyyy-MM-dd", new { @class = "form-control", @type = "date", name = "StartDateTime", id = "StartDateTime" })<span style="font-size: 12px;">"yyyy-MM-dd" format</span>
                         @Html.ValidationMessageFor(model => model.StartDateTime, "", new { @class = "text-danger" })
                     </div>
                 </div>
-
+                
                 <div class="form-group">
                     @Html.Label("Category", htmlAttributes: new { @class = "col-lg-3 control-label" })
                     <div class="col-lg-9">
